--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "Semantic"
   ],
   "author": "Eric Njanga",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-compass": "^1.3.1",
+    "gulp-connect": "^2.0.6"
+  }
 }
