--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-compass": "^1.3.1",
-    "gulp-connect": "^2.0.6"
+    "gulp-connect": "^2.0.6",
+    "gulp-util": "^3.0.1"
   }
 }
